--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "graph build",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ visorfinance/visor",
     "deploy-loc": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ l0c4t0r/visor",
+    "deploy-loc-arb": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ l0c4t0r/visor-arbitrum",
     "create-local": "graph create --node http://localhost:8020/ visorfinance/visor",
     "remove-local": "graph remove --node http://localhost:8020/ visorfinance/visor",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 visorfinance/visor",
