--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "graph build",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ visorfinance/visor",
     "deploy-loc": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ l0c4t0r/visor",
+    "deploy-lab": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ l0c4t0r/laboratory",
     "deploy-loc-arb": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ l0c4t0r/visor-arbitrum",
     "create-local": "graph create --node http://localhost:8020/ visorfinance/visor",
     "remove-local": "graph remove --node http://localhost:8020/ visorfinance/visor",
@@ -15,11 +16,11 @@
     "prepare:mainnet": "mustache config/mainnet.json subgraph.template.yaml > subgraph.yaml",
     "prepare:arbitrum": "mustache config/arbitrum.json subgraph.template.yaml > subgraph.yaml",
     "prepare:v3only-mainnet": "mustache config/mainnet.json v3only.template.yaml > subgraph.yaml",
-    "prepare:fd-mainnet": "mustache config/mainnet.json feeDistributor.template.yaml > subgraph.yaml"
+    "test": "graph test"
   },
   "devDependencies": {
-    "@graphprotocol/graph-cli": "^0.20.1",
-    "@graphprotocol/graph-ts": "^0.20.1",
+    "@graphprotocol/graph-cli": "^0.23.2",
+    "@graphprotocol/graph-ts": "^0.23.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^7.32.0",
@@ -27,5 +28,8 @@
     "mustache": "^4.2.0",
     "prettier": "2.4.1",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "matchstick-as": "^0.2.0"
   }
 }
